# rust-claw

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  main.rs  pinchtab.rs
src/agents/: agent.rs  agent_config.rs  agent_factory.rs  agent_interface.rs  config.rs  mod.rs  providers.rs
src/cli/: chat.rs  cli.rs  create_agent.rs  list_agents.rs  load_agent.rs  mod.rs  run_agent.rs
src/tools/: mod.rs  web_browser.rs
src/tools/terminal/: mod.rs  terminal.rs
src/tools/web_browser/: mod.rs  pinchtab.rs  web_browser.rs
tests/: agent_factory_test.rs  pinchtab_tests.rs
