[package]
name = "ai_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
rig-core = "0.32.0"
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
serde = "1.0.228"
serde_json = "1.0.149"
futures = "0.3.32"
reqwest = "0.13.2"
async-trait = "0.1.89"
dotenvy = "0.15.7"
clap = { version = "4.6.0", features = ["derive"] }

